add TransactionHash model class